--- a/style.css
+++ b/style.css
@@ -30,3 +30,15 @@
 .footer{
   text-align: center;
 }
+.img{
+  height: 300px;
+  position: absolute;
+  left: 50%;
+}
+.img2{
+  height: 150px;
+  width: 150px;
+  position: absolute;
+  top: 500px;
+  left: -0;
+}
